# LearnVulkan

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  conanfile.py  main.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt  buffer.cpp  camera.cpp  descriptors.cpp  device.cpp  game_object.cpp  keyboard_movement_controller.cpp  model.cpp  pipeline.cpp  point_light_system.cpp  renderer.cpp  simple_render_system.cpp  swap_chain.cpp  window.cpp
src/common/include/: buffer.hpp  camera.hpp  descriptors.hpp  device.hpp  frame_info.hpp  game_object.hpp  keyboard_movement_controller.hpp  model.hpp  pipeline.hpp  point_light_system.hpp  renderer.hpp  simple_render_system.hpp  swap_chain.hpp  utils.hpp  window.hpp
src/first_app/: CMakeLists.txt  first_app.cpp  first_app.hpp  main.cpp
src/shaders/: compile.sh
src/shaders/simple_shaders/: point_light.frag  point_light.vert  simple_shader.frag  simple_shader.vert
